--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@ up_amex.src="buttons/up/amex.gif";
 down_amex=new Image();
 down_amex.src="buttons/down/amex.gif";
 
+up_fantasy=new Image();
+up_fantasy.src="buttons/up/fantasy.gif";
+down_fantasy=new Image();
+down_fantasy.src="buttons/down/fantasy.gif";
+
+up_github=new Image();
+up_github.src="buttons/up/github.gif";
+down_github=new Image();
+down_github.src="buttons/down/github.gif";
+
+up_whatsapp=new Image();
+up_whatsapp.src="buttons/up/whatsapp.gif";
+down_whatsapp=new Image();
+down_whatsapp.src="buttons/down/whatsapp.gif";
+
 up_timescc=new Image();
 up_timescc.src="buttons/up/timescc.gif";
 down_timescc=new Image();
@@ -44,15 +59,15 @@ up_nationwide.src="buttons/up/nationwide.gif";
 down_nationwide=new Image();
 down_nationwide.src="buttons/down/nationwide.gif";
 
-up_solver=new Image();
-up_solver.src="buttons/up/solver.gif";
-down_solver=new Image();
-down_solver.src="buttons/down/solver.gif";
-
 up_iso=new Image();
 up_iso.src="buttons/up/iso.gif";
 down_iso=new Image();
 down_iso.src="buttons/down/iso.gif";
+	
+up_solver=new Image();
+up_solver.src="buttons/up/solver.gif";
+down_solver=new Image();
+down_solver.src="buttons/down/solver.gif";
 
 up_parkrun=new Image();
 up_parkrun.src="buttons/up/parkrun.gif";
@@ -403,8 +418,11 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.private-eye.co.uk"
 				ONMOUSEOVER="return MouseOver('priveye','down_priveye')"
 				ONMOUSEOUT="MouseOut('priveye','up_priveye')"><IMG HEIGHT="38"
-				SRC="buttons/up/priveye.gif" WIDTH="125" BORDER="0" NAME="priveye"></A></P> 
-</TD> 
+				SRC="buttons/up/priveye.gif" WIDTH="125" BORDER="0" NAME="priveye"></A></P>
+			 <P ALIGN="center"><A HREF="gallery2.html"
+				ONMOUSEOVER="return MouseOver('gallery','down_gallery')"
+				ONMOUSEOUT="MouseOut('gallery','up_gallery')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/gallery.gif" NAME="gallery"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.bikeradar.com"
 				ONMOUSEOVER="return MouseOver('bikeradar','down_bikeradar')"
@@ -419,10 +437,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('cricinfo','down_cricinfo')"
 				ONMOUSEOUT="MouseOut('cricinfo','up_cricinfo')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/cricinfo.gif" NAME="cricinfo"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.evanscycles.com/"
-				ONMOUSEOVER="return MouseOver('evans','down_evans')"
-				ONMOUSEOUT="MouseOut('evans','up_evans')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/evans.gif" NAME="evans"></A></P> 
+			 <P ALIGN="center"><A HREF="https://fantasy.premierleague.com/my-team"
+				ONMOUSEOVER="return MouseOver('fantasy','down_fantasy')"
+				ONMOUSEOUT="MouseOut('fantasy','up_fantasy')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/fantasy.gif" NAME="fantasy"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.parkrun.org.uk/bushy/parkrunner/7108395/"
 				ONMOUSEOVER="return MouseOver('parkrun','down_parkrun')"
 				ONMOUSEOUT="MouseOut('parkrun','up_parkrun')"><IMG
@@ -432,15 +450,19 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('sportstracker','down_sportstracker')"
 				ONMOUSEOUT="MouseOut('sportstracker','up_sportstracker')"><IMG
 				BORDER="0" WIDTH="125" SRC="buttons/up/sportstracker.gif" NAME="sportstracker"
-				HEIGHT="38"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.wiggle.co.uk"
-				ONMOUSEOVER="return MouseOver('wiggle','down_wiggle')"
-				ONMOUSEOUT="MouseOut('wiggle','up_wiggle')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/wiggle.gif" NAME="wiggle"></A></P>
-			 <P ALIGN="center"><A HREF="http://en.wikipedia.org"
-				ONMOUSEOVER="return MouseOver('wiki','down_wiki')"
-				ONMOUSEOUT="MouseOut('wiki','up_wiki')"><IMG BORDER="0" WIDTH="125"
-				SRC="buttons/up/wiki.gif" NAME="wiki" HEIGHT="38"></A></P></TD> 
+				HEIGHT="38"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
+				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
+				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/dylan.gif" NAME="dylan"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
+				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
+				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
+				SRC="buttons/up/hmhb.gif" NAME="hmhb"></A></P>
+			 <P ALIGN="center"><A HREF="qphotosupps.html"
+				ONMOUSEOVER="return MouseOver('qphotos','down_qphotos')"
+				ONMOUSEOUT="MouseOut('qphotos','up_qphotos')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/qphotos.gif" NAME="qphotos"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.google.co.uk/"
 				ONMOUSEOVER="return MouseOver('google','down_google')"
@@ -476,7 +498,11 @@ document.images[imageID].src = eval(objectName + ".src");
 			<P ALIGN="center"><A HREF="http://www.onelook.com/"
 				ONMOUSEOVER="return MouseOver('onelook','down_onelook')"
 				ONMOUSEOUT="MouseOut('onelook','up_onelook')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/onelook.gif" NAME="onelook"></A></P></TD> 
+				HEIGHT="38" SRC="buttons/up/onelook.gif" NAME="onelook"></A></P>
+			 <P ALIGN="center"><A HREF="http://en.wikipedia.org"
+				ONMOUSEOVER="return MouseOver('wiki','down_wiki')"
+				ONMOUSEOUT="MouseOut('wiki','up_wiki')"><IMG BORDER="0" WIDTH="125"
+				SRC="buttons/up/wiki.gif" NAME="wiki" HEIGHT="38"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A
 				HREF="https://login.iso.org/portal/"
@@ -528,6 +554,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('ebay','down_ebay')"
 				ONMOUSEOUT="MouseOut('ebay','up_ebay')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/ebay.gif" NAME="ebay"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.evanscycles.com/"
+				ONMOUSEOVER="return MouseOver('evans','down_evans')"
+				ONMOUSEOUT="MouseOut('evans','up_evans')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/evans.gif" NAME="evans"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.nespresso.com/uk/en/"
 				ONMOUSEOVER="return MouseOver('nespresso','down_nespresso')"
 				ONMOUSEOUT="MouseOut('nespresso','up_nespresso')"><IMG BORDER="0" WIDTH="125"
@@ -540,6 +570,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('opodo','down_opodo')"
 				ONMOUSEOUT="MouseOut('opodo','up_opodo')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/opodo.gif" NAME="opodo"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.wiggle.co.uk"
+				ONMOUSEOVER="return MouseOver('wiggle','down_wiggle')"
+				ONMOUSEOUT="MouseOut('wiggle','up_wiggle')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/wiggle.gif" NAME="wiggle"></A></P>
 			 <P ALIGN="CENTER"><A HREF="http://www.thewinesociety.com/"
 				ONMOUSEOVER="return MouseOver('winesoc','down_winesoc')"
 				ONMOUSEOUT="MouseOut('winesoc','up_winesoc')"><IMG BORDER="0" WIDTH="125"
@@ -547,15 +581,7 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.zoopla.co.uk/"
 				ONMOUSEOVER="return MouseOver('zoopla','down_zoopla')"
 				ONMOUSEOUT="MouseOut('zoopla','up_zoopla')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/zoopla.gif" NAME="zoopla"></A></P> 
-			 <P ALIGN="center"><A HREF="gallery2.html"
-				ONMOUSEOVER="return MouseOver('gallery','down_gallery')"
-				ONMOUSEOUT="MouseOut('gallery','up_gallery')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/gallery.gif" NAME="gallery"></A></P> 
-			 <P ALIGN="center"><A HREF="qphotosupps.html"
-				ONMOUSEOVER="return MouseOver('qphotos','down_qphotos')"
-				ONMOUSEOUT="MouseOut('qphotos','up_qphotos')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/qphotos.gif" NAME="qphotos"></A></P> </TD> 
+				HEIGHT="38" SRC="buttons/up/zoopla.gif" NAME="zoopla"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="CENTER"><A HREF="https://www.britishairways.com/travel/echome/execclub/_gf/en_gb?source=MNVEXC3_my_executive_club"
 				ONMOUSEOVER="return MouseOver('ba','down_ba')"
@@ -565,6 +591,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('facebook','down_facebook')"
 				ONMOUSEOUT="MouseOut('facebook','up_facebook')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/facebook.gif" NAME="facebook"></A></P>
+			 <P ALIGN="CENTER"><A HREF="https://github.com/AndyKnott/website"
+				ONMOUSEOVER="return MouseOver('github','down_github')"
+				ONMOUSEOUT="MouseOut('github','up_github')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/github.gif" NAME="github"></A></P> 
 			 <P ALIGN="CENTER"><A HREF="https://uk.linkedin.com/"
 				ONMOUSEOVER="return MouseOver('linked','down_linked')"
 				ONMOUSEOUT="MouseOut('linked','up_linked')"><IMG BORDER="0" WIDTH="125"
@@ -584,15 +614,10 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.tumblr.com/dashboard"
 				ONMOUSEOVER="return MouseOver('tumblr','down_tumblr')"
 				ONMOUSEOUT="MouseOut('tumblr','up_tumblr')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/tumblr.gif" NAME="tumblr"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
-				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
-				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/dylan.gif" NAME="dylan"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
-				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
-				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
-				SRC="buttons/up/hmhb.gif" NAME="hmhb"></A></P></TD> 
+				HEIGHT="38" SRC="buttons/up/tumblr.gif" NAME="tumblr"></A></P> 			 			 	 <P ALIGN="center"><A HREF="https://web.whatsapp.com/"
+				ONMOUSEOVER="return MouseOver('whatsapp','down_whatsapp')"
+				ONMOUSEOUT="MouseOut('whatsapp','up_whatsapp')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/whatsapp.gif" NAME="whatsapp"></A></P> </TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A
 				HREF="https://mail.virginmedia.com/appsuite/#!!&app=io.ox/mail&folder=default0/INBOX"
@@ -600,10 +625,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOUT="MouseOut('webmail','up_webmail')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/webmail.gif" NAME="webmail"
 				ALT="Webmail from Virgin media"></A></P> 
-			 <P ALIGN="center"><A HREF="https://www.disneyplus.com"
+			 <P ALIGN="center"><A HREF="http://www.disneyplus.com"
 				ONMOUSEOVER="return MouseOver('disney','down_disney')"
 				ONMOUSEOUT="MouseOut('disney','up_disney')"><IMG BORDER="0" WIDTH="125"
-				SRC="buttons/up/disney.gif" NAME="disney" HEIGHT="38"></A></P>				 
+				SRC="buttons/up/disney.gif" NAME="disney" HEIGHT="38"></A></P>
 			 <P ALIGN="center"><A HREF="http://www.netflix.com"
 				ONMOUSEOVER="return MouseOver('netflix','down_netflix')"
 				ONMOUSEOUT="MouseOut('netflix','up_netflix')"><IMG BORDER="0" WIDTH="125"
@@ -628,7 +653,7 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://fifteensquared.net/"
 				ONMOUSEOVER="return MouseOver('fifteen','down_fifteen')"
 				ONMOUSEOUT="MouseOut('fifteen','up_fifteen')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/fifteen.gif" NAME="fifteen"></A></P>				
+				HEIGHT="38" SRC="buttons/up/fifteen.gif" NAME="fifteen"></A></P>
 			 <P ALIGN="center"><A HREF="https://www.crosswordsolver.org/forum/"
 				ONMOUSEOVER="return MouseOver('solver','down_solver')"
 				ONMOUSEOUT="MouseOut('solver','up_solver')"><IMG HEIGHT="38"
