--- a/bwindex.html
+++ b/bwindex.html
@@ -24,6 +24,11 @@ up_amex.src="buttons/up/bw/amex.gif";
 down_amex=new Image();
 down_amex.src="buttons/down/amex.gif";
 
+up_sky=new Image();
+up_sky.src="buttons/up/bw/sky.gif";
+down_sky=new Image();
+down_sky.src="buttons/down/sky.gif";
+
 up_fantasy=new Image();
 up_fantasy.src="buttons/up/bw/fantasy.gif";
 down_fantasy=new Image();
@@ -638,6 +643,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('plex','down_plex')"
 				ONMOUSEOUT="MouseOut('plex','up_plex')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/bw/plex.gif" NAME="plex"></A></P> 
+			 <P ALIGN="center"><A HREF="https://www.sky.com/mysky"
+				ONMOUSEOVER="return MouseOver('sky','down_sky')"
+				ONMOUSEOUT="MouseOut('sky','up_sky')"><IMG BORDER="0" WIDTH="125"
+				SRC="buttons/up/bw/sky.gif" NAME="sky" HEIGHT="38"></A></P>
 			 <P ALIGN="center"><A HREF="http://www.youtube.com/"
 				ONMOUSEOVER="return MouseOver('youtube','down_youtube')"
 				ONMOUSEOUT="MouseOut('youtube','up_youtube')"><IMG BORDER="0" WIDTH="125"
