--- a/index.html
+++ b/index.html
@@ -660,7 +660,8 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.youtube.com/"
 				ONMOUSEOVER="return MouseOver('youtube','down_youtube')"
 				ONMOUSEOUT="MouseOut('youtube','up_youtube')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/youtube.gif" NAME="youtube"></A></P>
+				HEIGHT="38" SRC="buttons/up/youtube.gif" NAME="youtube"></A></P></TD> 
+		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="https://www.thetimes.co.uk/puzzleclub/crosswordclub/"
 				ONMOUSEOVER="return MouseOver('timescc','down_timescc')"
 				ONMOUSEOUT="MouseOut('timescc','up_timescc')"><IMG BORDER="0" WIDTH="125"
