--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('drive','down_drive')"
 				ONMOUSEOUT="MouseOut('drive','up_drive')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/drive.gif" NAME="drive"></A></P> 
-			 <P ALIGN="CENTER"><A HREF="https://mail.google.com/mail/u/1/#inbox"
+			 <P ALIGN="CENTER"><A HREF="https://mail.google.com/"
 				ONMOUSEOVER="return MouseOver('gmail','down_gmail')"
 				ONMOUSEOUT="MouseOut('gmail','up_gmail')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/gmail.gif" NAME="gmail"></A></P> 
