--- a/bwindex.html
+++ b/bwindex.html
@@ -24,6 +24,11 @@ up_wealthify.src="buttons/up/bw/wealthify.gif";
 down_wealthify=new Image();
 down_wealthify.src="buttons/down/wealthify.gif";
 
+up_strava=new Image();
+up_strava.src="buttons/up/bw/strava.gif";
+down_stravay=new Image();
+down_strava.src="buttons/down/strava.gif";
+
 up_chase=new Image();
 up_chase.src="buttons/up/bw/chase.gif";
 down_chase=new Image();
@@ -485,6 +490,11 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('sportstracker','down_sportstracker')"
 				ONMOUSEOUT="MouseOut('sportstracker','up_sportstracker')"><IMG
 				BORDER="0" WIDTH="125" SRC="buttons/up/bw/sportstracker.gif" NAME="sportstracker"
+				HEIGHT="38"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.strava.com/dashboard"
+				ONMOUSEOVER="return MouseOver('strava','down_strava')"
+				ONMOUSEOUT="MouseOut('strava','up_strava')"><IMG
+				BORDER="0" WIDTH="125" SRC="buttons/up/bw/strava.gif" NAME="strava"
 				HEIGHT="38"></A></P>
 			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
 				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
