--- a/bwindex.html
+++ b/bwindex.html
@@ -21,7 +21,7 @@ if (document.images) {
 
 up_strava=new Image();
 up_strava.src="buttons/up/bw/strava.gif";
-down_stravay=new Image();
+down_strava=new Image();
 down_strava.src="buttons/down/strava.gif";
 
 up_wealthify=new Image();
