--- a/bwindex.html
+++ b/bwindex.html
@@ -19,6 +19,11 @@
 // preload images:
 if (document.images) {
 
+up_ee=new Image();
+up_ee.src="buttons/up/bw/ee.gif";
+down_ee=new Image();
+down_ee.src="buttons/down/ee.gif";
+
 up_royalcar=new Image();
 up_royalcar.src="buttons/up/bw/royalcar.gif";
 down_royalcar=new Image();
@@ -591,6 +596,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('disney','down_disney')"
 				ONMOUSEOUT="MouseOut('disney','up_disney')"><IMG BORDER="0" WIDTH="125"
 				SRC="buttons/up/bw/disney.gif" NAME="disney" HEIGHT="38"></A></P>
+			 <P ALIGN="center"><A HREF="https://ee.co.uk"
+				ONMOUSEOVER="return MouseOver('ee','down_ee')"
+				ONMOUSEOUT="MouseOut('ee','up_ee')"><IMG BORDER="0" WIDTH="125"
+				SRC="buttons/up/bw/ee.gif" NAME="ee" HEIGHT="38"></A></P>
 			 <P ALIGN="center"><A HREF="http://www.netflix.com"
 				ONMOUSEOVER="return MouseOver('netflix','down_netflix')"
 				ONMOUSEOUT="MouseOut('netflix','up_netflix')"><IMG BORDER="0" WIDTH="125"
