--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				HEIGHT="38" SRC="buttons/up/chase.gif" NAME="chase"></A></P>
 			 <P ALIGN="center"><A
 				HREF="https://auth.landg.com//"
-				ONMOUSEOVER="return MouseOver('chase','down_lg')"
+				ONMOUSEOVER="return MouseOver('lg','down_lg')"
 				ONMOUSEOUT="MouseOut('lg','up_lg')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/lg.gif" NAME="lg"></A></P>
 			 <P ALIGN="center"><A HREF="https://onlinebanking.nationwide.co.uk/AccessManagement/Login"
